--- a/index.html
+++ b/index.html
@@ -3,9 +3,44 @@
     <head>
         <meta charset="UTF-8"/>
         <link rel="stylesheet" type="text/css" href="style.css"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&family=Oswald:wght@400;700&display=swap"
+         rel="stylesheet">
         <title>STARBUCKS</title>
     </head>
     <body>
+        <header>
+            <div class="line"></div>
+            <div class="container header--area">
+                <div class="header--left">
+                    <a href=""><img src="assets/logo.png"/></a>
+                </div>
+                <div class="header--right">
+                    <div class="header--search">
+                        <form method="GET">
+                            <input type="text" name="search" placeholder="Search"/>
+                            <button><img src="assets/loupe.png"/></button>                            
+                        </form>
+                    </div>
+                    <div class="header--menu">
+                        <img src="assets/menu.png"/>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <section class="banner">
+            <div class="container">
+                <h1>Starbucks®<br/>Happy Hour</h1>
+                <span>We’ll meet you in your inbox. Drink deals are on their way.</span>
+                <div class="banner--images">
+                    <img src="assets/c1.jpg"/>
+                    <img src="assets/c2.jpg"/>
+                    <img src="assets/c3.jpg"/>
+                </div>
+            </div>
+
+        </section>
         
     </body>
 </html>
